button styling, menu items fix and h5 text contrast colour changed

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -42,6 +42,7 @@ label {
 }
 
 .btn {
+	padding: 10px 14px;
 	&:hover {
 		background-color:lighten(@color-swatch3,5%);
 	}
@@ -258,6 +259,10 @@ header.bk-header {
     }
 }
 
+.widget.menu .menu-items > * {
+	display: list-item;
+}
+
 /*	===============================
 	Bootstrap Modifications
 	=============================== */
@@ -273,7 +278,7 @@ input, textarea {
 }
 
 .widget.profile form button {
-	padding: 7px 14px 11px;
+	padding: 9px 14px;
 }
 
 .signupform fieldset button {
@@ -310,7 +315,7 @@ input, textarea {
 .widget.responsiveslideshow .slideshow-widget .btn-prev, 
 .widget.responsiveslideshow .slideshow-widget .btn-next {
 	padding:5px;
-	background-color:#ddd;
+	background-color: lighten(@color-swatch7,80%);
 }
 
 .signupform fieldset input {
@@ -323,11 +328,6 @@ input, textarea {
 
 time {
 	font-size:1em;
-}
-
-.widget.responsiveslideshow .title, 
-.widget.responsiveslideshow .description {
-	color:@font-swatch5-color;
 }
 
 textarea.message {
@@ -410,6 +410,10 @@ select::-ms-expand {
 	display: block;
 }
 
+.basket-summary-empty-cta .btn a:hover {
+	text-decoration: none;
+}
+
 /* ===============================
    SLIDESHOW WIDGET
    =============================== */
@@ -425,14 +429,15 @@ select::-ms-expand {
             height: 280px;
         }
     }
-    .title,
+    .title {
+    	padding: 15px 0 10px 10px;
+    	display: block;
+        font-size: 15px;
+    }
     .description {
         display: block;
         font-size: 15px;
         padding: 5px 0 5px 10px;
-    }
-    .description {
-      padding-top: 0;
     }
     .content-wrapper {
         background: rgba(0,0,0,0.5);
@@ -483,8 +488,7 @@ select::-ms-expand {
             border-radius: 4px;
             &:after {
                 color: #fff;
-                letter-spacing: -4px;
-                top: 0;
+                top: 5px;
             }
         }
     }
@@ -514,9 +518,9 @@ select::-ms-expand {
     position: absolute;
     cursor: pointer;
     z-index: 12;
-    width: 42px;
-    height: 42px;
-    top: -5%;
+    width: 60px;
+    height: 60px;
+    top: -4%;
     left: 0;
     right: 0;
     bottom: 0;
@@ -527,11 +531,17 @@ select::-ms-expand {
     }
 }
 
-.widget.responsiveslideshow .slideshow-widget .btn-play:after {
-    top:-7px;
-    @media @mobile {
-        top: -12px;
-    }
+.widget.responsiveslideshow .btn-play:after {
+	content: "II";
+	text-indent: 0;
+	font-size: 30px;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	text-align: center;
+	font-weight: bold;
+	line-height: 62px;
 }
 
 /*	===============================
@@ -559,6 +569,10 @@ footer .widget.profile .bk-profile-socialicons span a {
 
 .footer-border {
 	text-align:center;
+}
+
+.bk-profile-address {
+	text-align: center;
 }
 
 /*	===============================
